--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,9 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "core": "cpp"
     }
 }
